--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>实时语音转文字显示</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -104,8 +104,14 @@
 
             connect() {
                 try {
-                    // 连接到 FastAPI WebSocket 端点
-                    this.ws = new WebSocket('ws://localhost:8000/ws/audio');
+                    // 动态获取 WebSocket 连接地址
+                    const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
+                    const host = window.location.hostname === '0.0.0.0' ? 'localhost' : window.location.hostname;
+                    const port = window.location.port;
+                    const wsUrl = `${protocol}//${host}:${port}/ws/audio`;
+
+                    console.log('连接到 WebSocket:', wsUrl);
+                    this.ws = new WebSocket(wsUrl);
 
                     this.ws.onopen = () => {
                         console.log('WebSocket连接已建立');
