--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>实时语音转文字显示</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -31,6 +31,7 @@
                 <button class="btn btn-record" id="recordBtn">🎤 开始录音</button>
                 <button class="btn btn-clear" id="clearBtn">清空文本</button>
                 <button class="btn btn-save" id="saveBtn">保存文本</button>
+                <button class="btn btn-summary" id="summaryBtn">📝 总结会议</button>
                 <button class="btn btn-reconnect" id="reconnectBtn">重新连接</button>
             </div>
             <div class="info">
@@ -39,6 +40,44 @@
                 <span>最后更新: <span id="lastUpdate">--</span></span>
             </div>
         </footer>
+
+        <!-- 会议总结弹窗 -->
+        <div class="modal" id="summaryModal" style="display: none;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>📝 会议记录总结</h2>
+                    <button class="modal-close" id="modalClose">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="summary-options">
+                        <label>
+                            <input type="radio" name="summaryType" value="brief" checked>
+                            简要总结 (重点摘要)
+                        </label>
+                        <label>
+                            <input type="radio" name="summaryType" value="detailed">
+                            详细总结 (完整分析)
+                        </label>
+                        <label>
+                            <input type="radio" name="summaryType" value="action">
+                            行动项总结 (待办事项)
+                        </label>
+                    </div>
+                    <div class="summary-result" id="summaryResult">
+                        <div class="loading" id="summaryLoading" style="display: none;">
+                            <div class="spinner"></div>
+                            <p>正在生成会议总结，请稍候...</p>
+                        </div>
+                        <div class="summary-content" id="summaryContent" style="display: none;"></div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary" id="generateSummaryBtn">生成总结</button>
+                    <button class="btn btn-secondary" id="saveSummaryBtn" style="display: none;">保存总结</button>
+                    <button class="btn btn-secondary" id="copySummaryBtn" style="display: none;">复制总结</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -70,17 +109,42 @@
                 this.recordBtn = document.getElementById('recordBtn');
                 this.clearBtn = document.getElementById('clearBtn');
                 this.saveBtn = document.getElementById('saveBtn');
+                this.summaryBtn = document.getElementById('summaryBtn');
                 this.reconnectBtn = document.getElementById('reconnectBtn');
                 this.connectionInfo = document.getElementById('connectionInfo');
                 this.lastUpdate = document.getElementById('lastUpdate');
+
+                // 总结弹窗相关元素
+                this.summaryModal = document.getElementById('summaryModal');
+                this.modalClose = document.getElementById('modalClose');
+                this.generateSummaryBtn = document.getElementById('generateSummaryBtn');
+                this.saveSummaryBtn = document.getElementById('saveSummaryBtn');
+                this.copySummaryBtn = document.getElementById('copySummaryBtn');
+                this.summaryLoading = document.getElementById('summaryLoading');
+                this.summaryContent = document.getElementById('summaryContent');
+                this.summaryResult = document.getElementById('summaryResult');
             }
 
             bindEvents() {
                 this.recordBtn.addEventListener('click', () => this.toggleRecording());
                 this.clearBtn.addEventListener('click', () => this.clearText());
                 this.saveBtn.addEventListener('click', () => this.saveText());
+                this.summaryBtn.addEventListener('click', () => this.showSummaryModal());
                 this.reconnectBtn.addEventListener('click', () => this.reconnect());
-                
+
+                // 总结弹窗事件
+                this.modalClose.addEventListener('click', () => this.hideSummaryModal());
+                this.generateSummaryBtn.addEventListener('click', () => this.generateSummary());
+                this.saveSummaryBtn.addEventListener('click', () => this.saveSummary());
+                this.copySummaryBtn.addEventListener('click', () => this.copySummary());
+
+                // 点击弹窗外部关闭
+                this.summaryModal.addEventListener('click', (e) => {
+                    if (e.target === this.summaryModal) {
+                        this.hideSummaryModal();
+                    }
+                });
+
                 // 键盘快捷键
                 document.addEventListener('keydown', (e) => {
                     if (e.ctrlKey) {
@@ -97,7 +161,15 @@
                                 e.preventDefault();
                                 this.reconnect();
                                 break;
+                            case 'm':
+                                e.preventDefault();
+                                this.showSummaryModal();
+                                break;
                         }
+                    }
+                    // ESC键关闭弹窗
+                    if (e.key === 'Escape') {
+                        this.hideSummaryModal();
                     }
                 });
             }
@@ -388,6 +460,214 @@
             sendHeartbeat() {
                 if (this.ws && this.ws.readyState === WebSocket.OPEN) {
                     this.ws.send(JSON.stringify({ type: 'ping' }));
+                }
+            }
+
+            // 会议总结相关方法
+            showSummaryModal() {
+                const textElements = this.textDisplay.querySelectorAll('.text-line.final');
+                if (textElements.length === 0) {
+                    alert('没有会议记录可以总结，请先进行语音转文字');
+                    return;
+                }
+
+                this.summaryModal.style.display = 'flex';
+                this.resetSummaryModal();
+            }
+
+            hideSummaryModal() {
+                this.summaryModal.style.display = 'none';
+            }
+
+            resetSummaryModal() {
+                this.summaryLoading.style.display = 'none';
+                this.summaryContent.style.display = 'none';
+                this.saveSummaryBtn.style.display = 'none';
+                this.copySummaryBtn.style.display = 'none';
+                this.generateSummaryBtn.style.display = 'inline-block';
+                this.summaryContent.innerHTML = '';
+            }
+
+            async generateSummary() {
+                // 获取所有会议文本
+                const meetingText = this.getMeetingText();
+                if (!meetingText.trim()) {
+                    alert('没有会议内容可以总结');
+                    return;
+                }
+
+                // 获取总结类型
+                const summaryType = document.querySelector('input[name="summaryType"]:checked').value;
+
+                // 显示加载状态
+                this.summaryLoading.style.display = 'block';
+                this.summaryContent.style.display = 'none';
+                this.generateSummaryBtn.style.display = 'none';
+
+                try {
+                    const summary = await this.callLLMSummary(meetingText, summaryType);
+                    this.displaySummary(summary);
+                } catch (error) {
+                    console.error('生成总结失败:', error);
+                    this.summaryLoading.style.display = 'none';
+                    this.generateSummaryBtn.style.display = 'inline-block';
+                    alert('生成总结失败: ' + error.message);
+                }
+            }
+
+            getMeetingText() {
+                const textElements = this.textDisplay.querySelectorAll('.text-line.final');
+                let meetingText = '';
+
+                textElements.forEach((element, index) => {
+                    const textContent = element.childNodes[0].textContent || element.textContent;
+                    const timestamp = element.querySelector('.timestamp')?.textContent || '';
+                    meetingText += `[${timestamp}] ${textContent}\n`;
+                });
+
+                return meetingText;
+            }
+
+            async callLLMSummary(meetingText, summaryType) {
+                const prompts = {
+                    brief: `请对以下会议记录进行简要总结，提取关键要点：
+
+会议记录：
+${meetingText}
+
+请按以下格式总结：
+## 会议简要总结
+
+### 主要议题
+- [列出主要讨论的议题]
+
+### 关键决定
+- [列出重要决定和结论]
+
+### 重要信息
+- [列出其他重要信息]`,
+
+                    detailed: `请对以下会议记录进行详细分析和总结：
+
+会议记录：
+${meetingText}
+
+请按以下格式进行详细总结：
+## 会议详细总结
+
+### 会议概述
+[会议的整体情况和背景]
+
+### 讨论内容
+[详细描述各个议题的讨论过程]
+
+### 决策事项
+[列出所有决定和决策]
+
+### 关键观点
+[记录重要的观点和建议]
+
+### 后续安排
+[如有提到后续计划或安排]`,
+
+                    action: `请从以下会议记录中提取行动项和待办事项：
+
+会议记录：
+${meetingText}
+
+请按以下格式整理：
+## 行动项总结
+
+### 待办事项
+- [具体的待办任务]
+- [负责人（如有提及）]
+- [截止时间（如有提及）]
+
+### 跟进事项
+- [需要跟进的事项]
+
+### 下次会议议题
+- [下次会议需要讨论的内容]
+
+### 注意事项
+- [需要特别注意的事项]`
+                };
+
+                const requestData = {
+                    model: 'gemini-1.5-flash',
+                    messages: [
+                        { role: 'user', content: prompts[summaryType] }
+                    ],
+                    temperature: 0.3,
+                    max_tokens: 1000
+                };
+
+                const response = await fetch('/llm/chat', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(requestData)
+                });
+
+                if (!response.ok) {
+                    const errorData = await response.json();
+                    throw new Error(errorData.detail || '请求失败');
+                }
+
+                const data = await response.json();
+                return data.content;
+            }
+
+            displaySummary(summary) {
+                this.summaryLoading.style.display = 'none';
+                this.summaryContent.style.display = 'block';
+                this.saveSummaryBtn.style.display = 'inline-block';
+                this.copySummaryBtn.style.display = 'inline-block';
+
+                // 将Markdown格式转换为HTML显示
+                this.summaryContent.innerHTML = this.markdownToHtml(summary);
+            }
+
+            markdownToHtml(markdown) {
+                return markdown
+                    .replace(/^## (.*$)/gm, '<h2>$1</h2>')
+                    .replace(/^### (.*$)/gm, '<h3>$1</h3>')
+                    .replace(/^- (.*$)/gm, '<li>$1</li>')
+                    .replace(/(<li>.*<\/li>)/gs, '<ul>$1</ul>')
+                    .replace(/\n\n/g, '<br><br>')
+                    .replace(/\n/g, '<br>');
+            }
+
+            saveSummary() {
+                const summaryText = this.summaryContent.textContent || this.summaryContent.innerText;
+                const meetingDate = new Date().toISOString().slice(0, 19).replace(/:/g, '-');
+
+                const blob = new Blob([summaryText], { type: 'text/plain;charset=utf-8' });
+                const url = URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                a.href = url;
+                a.download = `会议总结_${meetingDate}.txt`;
+                document.body.appendChild(a);
+                a.click();
+                document.body.removeChild(a);
+                URL.revokeObjectURL(url);
+            }
+
+            async copySummary() {
+                const summaryText = this.summaryContent.textContent || this.summaryContent.innerText;
+
+                try {
+                    await navigator.clipboard.writeText(summaryText);
+                    // 临时改变按钮文本以显示成功
+                    const originalText = this.copySummaryBtn.textContent;
+                    this.copySummaryBtn.textContent = '✅ 已复制';
+                    setTimeout(() => {
+                        this.copySummaryBtn.textContent = originalText;
+                    }, 2000);
+                } catch (error) {
+                    console.error('复制失败:', error);
+                    alert('复制失败，请手动选择文本复制');
                 }
             }
         }
