feat: 提示词优化

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -573,50 +573,79 @@ ${meetingText}
 
 请确保总结内容准确反映会议要点，语言表达清晰专业。`,
 
-                    detailed: `请对以下会议记录进行详细分析和总结：
+                    detailed: `你是一个资深的会议分析师，擅长从语音识别文本中提取和整理完整的会议信息。以下是通过ASR技术转换的会议记录，文本中可能包含识别错误，请基于语境理解进行详细分析和总结。
 
-会议记录：
+**原始ASR会议记录：**
 ${meetingText}
 
-请按以下格式进行详细总结：
-## 会议详细总结
+**分析要求：**
+1. **语境理解**: 智能识别和理解可能的同音字、语法错误
+2. **全面分析**: 深入分析会议的各个方面和层次
+3. **逻辑重构**: 重新组织和梳理会议内容的逻辑结构
+4. **专业表达**: 使用准确、专业的商务语言进行表述
+5. **细节保留**: 保留重要的讨论细节和关键信息
 
-### 会议概述
-[会议的整体情况和背景]
+**输出格式：**
+## 📊 会议详细总结
 
-### 讨论内容
-[详细描述各个议题的讨论过程]
+### 🎯 会议概述
+[基于ASR文本理解，描述会议的整体情况、背景和目标]
 
-### 决策事项
-[列出所有决定和决策]
+### 💬 讨论内容
+[详细描述各个议题的讨论过程，修正表达错误，保持逻辑清晰]
 
-### 关键观点
-[记录重要的观点和建议]
+### 📋 决策事项
+[列出所有决定和决策，确保表述准确无歧义]
 
-### 后续安排
-[如有提到后续计划或安排]`,
+### 🔍 关键观点
+[记录重要的观点和建议，用专业语言重新表述]
 
-                    action: `请从以下会议记录中提取行动项和待办事项：
+### 📅 后续安排
+[整理后续计划或安排，确保时间、责任人等信息准确]
 
-会议记录：
+### ⚠️ 分析说明
+- 本总结基于ASR识别文本，已智能修正明显的识别错误
+- 对于可能存在歧义的专业术语，已根据上下文进行合理推断
+- 建议对关键决策内容进行录音回听确认
+
+请确保总结全面、准确，语言专业规范。`,
+
+                    action: `你是一个专业的项目管理专家，擅长从会议记录中提取可执行的行动项。以下是通过ASR技术转换的会议记录，文本中可能存在识别错误，请基于语境理解提取准确的行动项和待办事项。
+
+**原始ASR会议记录：**
 ${meetingText}
 
-请按以下格式整理：
-## 行动项总结
+**提取要求：**
+1. **智能识别**: 从可能有错误的ASR文本中准确识别行动项
+2. **责任明确**: 尽量识别和明确任务的负责人
+3. **时间准确**: 准确提取时间节点，修正可能的时间表述错误
+4. **任务具体**: 将模糊的表述转化为具体可执行的任务
+5. **优先级判断**: 根据讨论内容判断任务的重要性和紧急性
 
-### 待办事项
-- [具体的待办任务]
-- [负责人（如有提及）]
-- [截止时间（如有提及）]
+**输出格式：**
+## 📋 行动项总结
 
-### 跟进事项
-- [需要跟进的事项]
+### ✅ 待办事项
+- **任务**: [具体的待办任务，修正ASR识别错误]
+- **负责人**: [负责人姓名或部门，如有提及]
+- **截止时间**: [准确的时间节点，修正时间表述]
+- **优先级**: [高/中/低，基于讨论内容判断]
 
-### 下次会议议题
-- [下次会议需要讨论的内容]
+### 🔄 跟进事项
+- [需要持续跟进的事项，确保表述清晰]
 
-### 注意事项
-- [需要特别注意的事项]`,
+### 📅 下次会议议题
+- [下次会议需要讨论的内容，整理表达]
+
+### ⚠️ 注意事项
+- [需要特别注意的事项和风险点]
+
+### 📝 提取说明
+- 本行动项基于ASR识别文本提取，已尽量修正识别错误
+- 对于时间、人名等关键信息，建议与会议录音进行核对
+- 如有任务描述不够明确，建议进一步澄清具体要求
+
+请确保行动项清晰、具体、可执行。`,
 
                     optimize: `你是一个专业的语音识别文本优化专家。以下是通过ASR(语音识别)技术转换的会议记录文本，由于语音识别技术的局限性，文本中存在各种识别错误。请帮助我优化和修正这些文本，使其更加准确、流畅。
 
@@ -661,13 +690,21 @@ ${meetingText}
 请务必确保优化后的文本语义准确、语言流畅、逻辑清晰，同时完全保持会议记录的原始含义和重要信息。`
                 };
 
+                // 根据功能类型设置合适的Token限制
+                const tokenLimits = {
+                    'brief': 1200,      // 简要总结需要适中的空间
+                    'detailed': 1800,   // 详细总结需要更多空间
+                    'action': 1500,     // 行动项需要较多空间列举任务
+                    'optimize': 2000    // 优化功能需要最多空间输出完整文本
+                };
+
                 const requestData = {
                     model: 'gemini-1.5-flash',
                     messages: [
                         { role: 'user', content: prompts[summaryType] }
                     ],
                     temperature: 0.3,
-                    max_tokens: summaryType === 'optimize' ? 2000 : 1000
+                    max_tokens: tokenLimits[summaryType] || 1000
                 };
 
                 const response = await fetch('/llm/chat', {
