feat: 提示词优化

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -567,11 +567,7 @@ ${meetingText}
 ### 💡 重要信息
 - [列出其他重要信息，确保表达准确清晰]
 
-### 📝 备注说明
-- 本总结基于ASR识别文本生成，已尽量修正明显的识别错误
-- 如有关键信息表述不清，建议参考原始录音进行确认
-
-请确保总结内容准确反映会议要点，语言表达清晰专业。`,
+`,
 
                     detailed: `你是一个资深的会议分析师，擅长从语音识别文本中提取和整理完整的会议信息。以下是通过ASR技术转换的会议记录，文本中可能包含识别错误，请基于语境理解进行详细分析和总结。
 
@@ -603,12 +599,7 @@ ${meetingText}
 ### 📅 后续安排
 [整理后续计划或安排，确保时间、责任人等信息准确]
 
-### ⚠️ 分析说明
-- 本总结基于ASR识别文本，已智能修正明显的识别错误
-- 对于可能存在歧义的专业术语，已根据上下文进行合理推断
-- 建议对关键决策内容进行录音回听确认
-
-请确保总结全面、准确，语言专业规范。`,
+`,
 
                     action: `你是一个专业的项目管理专家，擅长从会议记录中提取可执行的行动项。以下是通过ASR技术转换的会议记录，文本中可能存在识别错误，请基于语境理解提取准确的行动项和待办事项。
 
@@ -640,14 +631,9 @@ ${meetingText}
 ### ⚠️ 注意事项
 - [需要特别注意的事项和风险点]
 
-### 📝 提取说明
-- 本行动项基于ASR识别文本提取，已尽量修正识别错误
-- 对于时间、人名等关键信息，建议与会议录音进行核对
-- 如有任务描述不够明确，建议进一步澄清具体要求
+`,
 
-请确保行动项清晰、具体、可执行。`,
-
-                    optimize: `你是一个专业的语音识别文本优化专家。以下是通过ASR(语音识别)技术转换的会议记录文本，由于语音识别技术的局限性，文本中存在各种识别错误。请帮助我优化和修正这些文本，使其更加准确、流畅。
+                    optimize: `你是一个专业的语音识别文本优化专家。以下是通过ASR(语音识别)技术转换的会议记录文本，由于语音识别技术的局限性，文本中存在各种识别错误。请帮助我优化和修正这些文本，确保优化后的文本语义准确、语言流畅、逻辑清晰，同时完全保持会议记录的原始含义和重要信息。
 
 **原始ASR识别文本：**
 ${meetingText}
@@ -687,7 +673,7 @@ ${meetingText}
 
 [在此输出完整的优化后会议记录，严格保持时间戳格式]
 
-请务必确保优化后的文本语义准确、语言流畅、逻辑清晰，同时完全保持会议记录的原始含义和重要信息。`
+`
                 };
 
                 // 根据功能类型设置合适的Token限制
